# bitonic_sort

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.hpp  fast_kernel.cl  kernel_for_sort.cl  main.cpp  ocl_app.cpp  ocl_app.hpp  slow_kernel.cl  utils.cpp
.github/workflows/: workflow.yml
include/: config.hpp  ocl_app.hpp  utils.hpp
source/: config.cpp  main.cpp  ocl_app.cpp  utils.cpp
tests/: CMakeLists.txt  ete_tests_runner.sh
tests/ete_tests/: test_01.out  test_02.in  test_02.out  test_03.out  test_04.out  test_05.in  test_05.out  test_06.out  test_07.out  test_08.in  test_08.out  test_09.out  test_10.in  test_10.out  tests_generator.py
tests/unit_tests/: unit_tests.cpp
